# bantu-ai-turathTool

./: .dockerignore  .gitignore  API_WORKFLOW_GUIDE.md  Dockerfile  Dockerfile.mcp  README.md  README_DOCKER.md  WORKFLOW_INTEGRATION.md  debug_arxiv.py  debug_arxiv_params.py  docker-compose-helper.ps1  docker-compose-helper.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-mcp.txt  requirements.txt  requirements_scientific.txt  requirements_tavily.txt  test_combined_search.py  test_scientific_tools.py  test_source_detection.py  turath-mcp.py
.github/workflows/: docker-image.yml
Tools/turathMCP/: databuku.json  test_turath_mcp.py  turath-mcp.py
_TEST/: test_agent_simple.py  test_agent_tools.py  test_mcp_direct.py  test_mcptools.py  test_no_reasoning.py  test_real_query.py  test_simple_islamic.py
_documentation_/: SCIENTIFIC_INTEGRATION.md  TAVILY_SETUP.md  Turath_README.md
_test_/: test_agent_simple.py  test_mcp_direct.py  test_mcptools.py  test_no_reasoning.py
config/: README.md  test_workflow.json
data/: turath_metadata.db
deployment/: Dockerfile  Dockerfile.mcp  README.md  docker-compose.override.yml  docker-compose.yml  requirements.txt
examples/: api_workflow_examples.py  workflow_examples.py
scripts/: docker-build.sh  docker-run.bat  docker-run.sh
services/: turath-mcp.py
src/: __init__.py
src/agents/: __init__.py  base.py  fact_checker.py  turath_query.py  turath_team_manager.py  turath_writer.py
src/api/: __init__.py  app.py  routes.py  v1_router.py  (+1 more)
(+18 files in other folders)
